[package]
name = "expand-env-vars"
description = "Cross-platform environment variable expander for Rust (supports $VAR, ${VAR}, and %VAR%)"
version = "0.2.0"
edition = "2024"
authors = ["Uzair Aftab <uzaaft@outlook.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/uzaaft/expand-env-vars"
homepage = "https://github.com/uzaaft/expand-env-vars"
documentation = "https://docs.rs/expand-env-vars"
keywords = ["environment", "variables", "unix", "windows", "expansion"]


[dependencies]
regex = { version = "1.11.1", features = [], optional = true }

[features]
regex = ["dep:regex"]
